Add share button to options menu

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text">nya</string><string name="hello">{&quot;l3&quot;: &quot;\u043c\u043e\u0437\u0433\u0438 \u043f\u043e \u043f\u043e\u043b\u0443 \u0440\u0430\u0441\u0442\u0435\u043a\u043b\u0438\u0441\u044c&quot;, &quot;l2&quot;: &quot;\u043d\u043e\u0433\u043e\u0439 \u0437\u0430 \u0447\u0442\u043e \u0442\u043e \u0437\u0430\u0446\u0435\u043f\u0438\u043b\u0441\u044f&quot;, &quot;id&quot;: 212.0, &quot;l0&quot;: &quot;\u043e\u043b\u0435\u0433 \u043b\u0438\u0445\u0438\u043c \u043a\u0430\u0432\u0430\u043b\u0435\u0440\u0438\u0441\u0442\u043e\u043c&quot;, &quot;l1&quot;: &quot;\u0431\u0440\u0430\u043b \u0442\u0443\u0440\u043d\u0438\u043a\u0435\u0442 \u0432 \u043c\u0435\u0442\u0440\u043e \u043d\u043e \u0440\u0430\u0437&quot;}</string>
+    <string name="text">nya</string>
     <string name="app_name">Lit</string>
+
+    <string name="share_button">Share</string>
+    <string name="share_title">Share</string>
+    <string name="share_extra_title">The nice poems</string>
+    <string name="share_sign">From lit.animuchan.net</string>
+
     <color name="text_color">#0D0D0D</color>
     <color name="background_color">#F1F1F1</color>
     <color name="text_background_color">#FFFFFF</color>
     <color name="border_color">#333</color>
-    
-    
+
+
 </resources>
